visiverse/static/css/custom.css
:root {
	/* Theme colors */
	--color-bg: #101020;

	--color-accent: #2B65EC;
	--color-accent-2: #19409b;

	--color-secondary: #1e1e33;
	--color-secondary-2: #3f3f5f;

	--color-text-foreground: white;
	--color-text-foreground-invert: black;
	--color-text-minor: #a0a0a0;
	--color-text-link: #2B65EC;

	--color-green: #0bb375;
	--color-green-2: #05744b;

	--color-red: #d30b25;
	--color-red-2: #8b0d1d;

	--page-content-size: 1400px;
}

* {
	box-sizing: border-box;
}

body {
	margin: 0;
	min-height: 100vh;
	position: relative;
	color: var(--color-text-foreground);
	background-color: var(--color-bg);
	font-family: Arial, Helvetica, sans-serif;
}
main {
	max-width: var(--page-content-size);
	margin: auto;
}

heading {
	display: block;
}
a {
	color: unset;
	text-decoration: none;
}
h1, h2, h3, h4, h5, h6 {
	margin: 0;
	display: block;
}

/* Generic custom components */

.section-header {
	margin: 10px 5px;
	padding: 0 5px;
	padding-bottom: 2px;
	border-bottom: solid 2px var(--color-accent);
}
.section-content {
	margin: 10px;
}

.bubble-block {
	margin: 10px;
	padding: 5px;
	border-radius: 10px;
	background-color: var(--color-secondary);
}

.link {
	transition: 0.3s;
}
.link:hover {
	color: var(--color-accent);
}
.link-list .link-item {
	display: block;
	margin: 3px;
	padding: 5px;
	border-radius: 5px;
	transition: 0.3s;
	background-color: var(--color-secondary);
}
.link-list .link-item:hover{
	background-color: var(--color-secondary-2);
}

.ratio {
	display: block;
	position: relative;
	width: 100%;
	overflow: hidden;
}
.ratio-16x9 {
	padding-top: 56.25%;
}
.ratio-inner {
	display: block;
	position: absolute;
	top: 0;
	width: 100%;
	height: 100%;	
}

.stage {
	background-color: black;
}
.stage-content {
	width: 100%;
	height: 100%;
	object-fit: contain;
}
.stage-info {
	align-items: center;
	justify-content: space-between;
}

.vl {
	border-left: 1px solid var(--color-secondary-2);
	margin: 0 5px;
}

/* Buttons */

.button {
	border: none;
	padding: 8px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	border-radius: 8px;
	transition: 0.3s;
	cursor: pointer;
	font-family: inherit;
	font-size: 1em;
	color: var(--color-text-foreground);
}
.button-sm {
	padding: 6px;
	font-size: 0.8em;
}
.button-group {
	display: inline-flex;
	border-radius: 8px;
	overflow: hidden;
}
.button-group .button {
	border-radius: 0;
}
.button-dark {
	background-color: var(--color-secondary);
}
.button-dark:hover {
	background-color: var(--color-secondary-2);
}
.button-green {
	background-color: var(--color-green);
}
.button-green:hover {
	background-color: var(--color-green-2);
}
.button-red {
	background-color: var(--color-red);
}
.button-red:hover {
	background-color: var(--color-red-2);
}

/* Tiles/grids */

.tile-grid {
	display: grid;
	gap: 8px;
}
.tile-details {
	font-size: 0.9em;
	color: var(--color-text-minor);
}

.bubble-overlay {
	position: absolute;
	bottom: 0;
	right: 0;
	padding: 4px;
	font-size: 0.9em;
	text-align: right;
}
.bubble-overlay span {
	display: inline-block;
	padding: 3px;
	border-radius: 6px;
	background-color: rgba(0, 0, 0, 0.75);
}

.field-sm {
	margin: 2px 0;
}
.field-md {
	margin: 5px 0;
}
.field-lg {
	margin: 8px 0;
}

/* Profile info */

.profile-icon {
	--profile-icon-size: 50px;
	width: var(--profile-icon-size);
	height: var(--profile-icon-size);
	border-radius: calc(var(--profile-icon-size) / 2);
	margin-right: 10px;
	background-color: var(--color-secondary);
}
.profile-details {
	font-size: 0.9em;
	color: var(--color-text-minor);
}

/* Generic effects */

.shadow {
	box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.5);
}

.grow {
	transition: 0.3s;
}
.grow:hover {
	transform: scale(1.1);
}

.d-flex {
	display: flex;
}

.flex-align-center {
	align-items: center;
}

.text-right {
	text-align: right;
}


/* Navigation bars */

.nav-container {
	background-color: var(--color-secondary);
}
.nav-inner {
	max-width: var(--page-content-size);
	margin: auto;
	overflow: auto;
}
.nav-brand {
	float: left;
	display: flex;
	align-items: center;
	padding: 5px;
}
.nav-logo {
	display: block;
	margin: 0 10px;
	width: 40px;
	height: 40px;
}
.nav-title {
	display: none;
}
.nav-content {
	display: flex;
	justify-content: end;
	height: 50px;
}
.nav-section {
	display: flex;
	align-items: center;
	margin-right: 10px;
}
.nav-link {
	margin: 0 7px;
	padding: 2px 3px;
	font-size: 1.2em;
}
.nav-link.active {
	margin-bottom: -3px;
	border-bottom: solid 3px var(--color-accent);
}

/* Pager header and footer */
.page-header {
	margin-bottom: 5px;
}
.page-footer {
	width: 100%;
	position: absolute;
	bottom: 0;
}
.footer-content {
	display: flex;
	margin: 10px;
}
.footer-link {
	margin: 3px;
}

@media only screen and (min-width: 700px) {
	.tile-grid {
		grid-template-columns: repeat(3, minmax(0, 1fr));
	}
	.stage-info {
		display: flex;
	}
}

@media only screen and (min-width: 900px) {
	:root {
		--sidebar-width: 250px;
	}
	.nav-title {
		display: block;
	}
	.page-content.has-sidebar {
		float: left;
		width: calc(100% - var(--sidebar-width));
	}
	.sidebar {
		float: left;
		width: var(--sidebar-width);
	}
}

@media only screen and (min-width: 1200px) {
	.tile-grid {
		grid-template-columns: repeat(4, minmax(0, 1fr));
	}
}

